[gd_scene load_steps=20 format=2]

[ext_resource path="res://src/Menu/Menu.gd" type="Script" id=1]
[ext_resource path="res://assets/images/backgrounds/main-menu.png" type="Texture" id=2]
[ext_resource path="res://assets/images/ui/logo.png" type="Texture" id=3]
[ext_resource path="res://assets/themes/main_menu_button.tres" type="Theme" id=4]
[ext_resource path="res://assets/images/backgrounds/main-menu-player-other.png" type="Texture" id=5]
[ext_resource path="res://assets/images/backgrounds/main-menu-player-hair-02.png" type="Texture" id=6]
[ext_resource path="res://assets/themes/main_menu_button_small.tres" type="Theme" id=7]
[ext_resource path="res://assets/images/backgrounds/main-menu-player.png" type="Texture" id=8]
[ext_resource path="res://assets/images/backgrounds/main-menu-gradient.png" type="Texture" id=9]
[ext_resource path="res://assets/sounds/button.wav" type="AudioStream" id=10]

[sub_resource type="Shader" id=16]
code = "shader_type canvas_item;

uniform vec4 BLACK : hint_color;
uniform vec4 SKIN_COLOR : hint_color;
uniform vec4 SHIRT_COLOR : hint_color;
uniform vec4 PANTS_COLOR : hint_color;
uniform vec4 SHOES_COLOR : hint_color;

void fragment() {
	vec4 referenceColor[13];
	referenceColor[0] = BLACK;
	referenceColor[1] = SKIN_COLOR * 0.2;
	referenceColor[2] = SKIN_COLOR * 0.8;
	referenceColor[3] = SKIN_COLOR;
	referenceColor[4] = SHIRT_COLOR * 0.2;
	referenceColor[5] = SHIRT_COLOR * 0.8;
	referenceColor[6] = SHIRT_COLOR;
	referenceColor[7] = PANTS_COLOR * 0.2;
	referenceColor[8] = PANTS_COLOR * 0.8;
	referenceColor[9] = PANTS_COLOR;
	referenceColor[10] = SHOES_COLOR * 0.2;
	referenceColor[11] = SHOES_COLOR * 0.8;
	referenceColor[12] = SHOES_COLOR;
	
	vec2 uv = UV;
	vec4 color = texture(TEXTURE, uv);
	int idx = int(floor(color.r * 19.0));
	for (int i=0; i<13; i++) {
		if (idx == i) {
			color.rgb = referenceColor[i].rgb;
			break;
		}
	}
	COLOR = color;
}
"

[sub_resource type="ShaderMaterial" id=17]
shader = SubResource( 16 )
shader_param/BLACK = null
shader_param/SKIN_COLOR = null
shader_param/SHIRT_COLOR = null
shader_param/PANTS_COLOR = null
shader_param/SHOES_COLOR = null

[sub_resource type="Shader" id=18]
code = "shader_type canvas_item;

uniform vec4 HAIR_COLOR : hint_color;

void fragment() {
	vec4 referenceColor[3];
	referenceColor[0] = HAIR_COLOR * 0.4;
	referenceColor[1] = HAIR_COLOR * 0.8;
	referenceColor[2] = HAIR_COLOR;
	
	vec2 uv = UV;
	vec4 color = texture(TEXTURE, uv);
	int idx = int(floor(color.r * 4.0));
	for (int i=0; i<3; i++) {
		if (idx == i) {
			color.rgb = referenceColor[i].rgb;
			break;
		}
	}
	COLOR = color;
}
"

[sub_resource type="ShaderMaterial" id=19]
shader = SubResource( 18 )
shader_param/HAIR_COLOR = null

[sub_resource type="ViewportTexture" id=20]
viewport_path = NodePath("PlayerViewport")

[sub_resource type="Animation" id=11]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("FullPlayerTR:rect_scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("FullPlayerTR:rect_scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=10]
resource_name = "Start"
loop = true
step = 0.05
tracks/0/type = "bezier"
tracks/0/path = NodePath("FullPlayerTR:rect_scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0.95, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("FullPlayerTR:rect_scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1.05, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}

[sub_resource type="Animation" id=12]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("MarginContainer/VBoxContainer/LogoTR:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=13]
resource_name = "Start"
loop = true
step = 0.05
tracks/0/type = "bezier"
tracks/0/path = NodePath("MarginContainer/VBoxContainer/LogoTR:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( -1, -0.25, 0, 0.2, 0.0265806, 1, -0.3, 0.0507207, 0.325, -0.014185, -1, -0.2, 0.0265806, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("MarginContainer/VBoxContainer/LogoTR:rect_scale:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.15, -0.000448465, 1.05, -0.15, -0.00146115, 0.15, 0.000171661, 1, -0.15, 0.000367999, 0.15, 0.000367999, 1.05, -0.15, -0.000644684, 0.15, -0.000644684, 1, -0.15, 0.00118446, 0.25, 0 ),
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("MarginContainer/VBoxContainer/LogoTR:rect_scale:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.15, 0.000367999, 1.05, -0.15, -0.00146115, 0.15, -0.00146115, 1, -0.15, 0.000367999, 0.15, 0.000367999, 1.05, -0.15, -0.000644684, 0.15, -0.000644684, 1, -0.15, 0.00118446, 0.25, 0 ),
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1 )
}

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
player_tr_path = NodePath("PlayerViewport/PlayerTR")
player_hair_tr_path = NodePath("PlayerViewport/PlayerHairTR")
logo_tr_path = NodePath("MarginContainer/VBoxContainer/LogoTR")
start_btn_path = NodePath("MarginContainer/VBoxContainer/MarginContainer/MarginContainer/VBoxContainer/StartBtn")
select_level_btn_path = NodePath("MarginContainer/VBoxContainer/MarginContainer/MarginContainer/VBoxContainer/SelectLevelBtn")
customization_btn_path = NodePath("MarginContainer/VBoxContainer/MarginContainer/MarginContainer/VBoxContainer/CustomizationBtn")
settings_btn_path = NodePath("MarginContainer/VBoxContainer/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/SettingsBtn")
credits_btn_path = NodePath("MarginContainer/VBoxContainer/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/CreditsBtn")

[node name="PlayerViewport" type="Viewport" parent="."]
size = Vector2( 249, 369 )
transparent_bg = true
render_target_v_flip = true

[node name="PlayerTR" type="TextureRect" parent="PlayerViewport"]
material = SubResource( 17 )
margin_right = 252.0
margin_bottom = 372.0
texture = ExtResource( 8 )

[node name="PlayerHairTR" type="TextureRect" parent="PlayerViewport"]
material = SubResource( 19 )
margin_right = 252.0
margin_bottom = 372.0
texture = ExtResource( 6 )

[node name="PlayerOtherTR" type="TextureRect" parent="PlayerViewport"]
margin_right = 252.0
margin_bottom = 372.0
texture = ExtResource( 5 )

[node name="BackgroundTR" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="GradientTR" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 1237, 481 )
texture = ExtResource( 9 )
expand = true
stretch_mode = 6

[node name="FullPlayerTR" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 611.0
margin_top = 103.0
margin_right = -100.0
margin_bottom = -68.0
rect_pivot_offset = Vector2( 125, 340 )
texture = SubResource( 20 )
expand = true

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_left = 80
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 80.0
margin_top = 164.0
margin_right = 480.0
margin_bottom = 375.0
size_flags_horizontal = 0
size_flags_vertical = 6
custom_constants/separation = 16

[node name="LogoTR" type="TextureRect" parent="MarginContainer/VBoxContainer"]
margin_right = 400.0
margin_bottom = 100.0
rect_min_size = Vector2( 400, 100 )
rect_pivot_offset = Vector2( 200, 50 )
size_flags_horizontal = 6
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 116.0
margin_right = 400.0
margin_bottom = 211.0
rect_min_size = Vector2( 400, 0 )
size_flags_horizontal = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
margin_right = 400.0
margin_bottom = 95.0
custom_constants/margin_right = 32
custom_constants/margin_top = 32
custom_constants/margin_left = 32
custom_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer/MarginContainer"]
margin_left = 90.0
margin_top = 32.0
margin_right = 310.0
margin_bottom = 63.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 6
custom_constants/separation = 16

[node name="StartBtn" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/MarginContainer/VBoxContainer"]
visible = false
margin_right = 220.0
margin_bottom = 42.0
focus_mode = 0
theme = ExtResource( 4 )
text = "Comenzar"
__meta__ = {
"_editor_description_": ""
}

[node name="SelectLevelBtn" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/MarginContainer/VBoxContainer"]
visible = false
margin_top = 58.0
margin_right = 270.0
margin_bottom = 100.0
focus_mode = 0
theme = ExtResource( 4 )
text = "Seleccionar Nivel"
__meta__ = {
"_editor_description_": ""
}

[node name="CustomizationBtn" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/MarginContainer/VBoxContainer"]
visible = false
margin_top = 58.0
margin_right = 270.0
margin_bottom = 100.0
focus_mode = 0
theme = ExtResource( 4 )
text = "Personalizar Avatar"
__meta__ = {
"_editor_description_": ""
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer/MarginContainer/VBoxContainer"]
margin_right = 220.0
margin_bottom = 31.0
custom_constants/separation = 16

[node name="SettingsBtn" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 106.0
margin_bottom = 31.0
focus_mode = 0
size_flags_horizontal = 3
theme = ExtResource( 7 )
text = "Opciones"
__meta__ = {
"_editor_description_": ""
}

[node name="CreditsBtn" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 122.0
margin_right = 220.0
margin_bottom = 31.0
focus_mode = 0
size_flags_horizontal = 3
theme = ExtResource( 7 )
text = "Créditos"
__meta__ = {
"_editor_description_": ""
}

[node name="PlayerAP" type="AnimationPlayer" parent="."]
playback_speed = 0.5
anims/RESET = SubResource( 11 )
anims/Start = SubResource( 10 )

[node name="LogoAP" type="AnimationPlayer" parent="."]
playback_speed = 0.3
anims/RESET = SubResource( 12 )
anims/Start = SubResource( 13 )

[node name="ButtonSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
bus = "Sfx"
